2001-03-03 Lutz Horn <lh@lutz-horn.de>

	* New directory 'documents'. First file is doi.html containing the
	  Declaration of Intent.

2001-03-02 Lutz Horn <lh@lutz-horn.de>

	* Added german translation welcome.de.txt of the welcome text.

2001-03-02  Frederic Couchet  <fcouchet@april.org>

	* volunteers/webmasters.en.txt : english text for the webmasters

Fri Feb 23 10:02:51 2001  Loic Dachary  <loic@senga.org>

	* events/IDA-Brussels-2001.02.22.txt: Add

Fri Feb 16 17:32:22 2001  Loic Dachary  <loic@senga.org>

	* volunteers/wellcome.*.txt: Add french and english wellcome message
	  for volunteers.