@@ -1,146 +1,99 @@
-<!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <HTML>
 <HEAD>
 <TITLE>Free Software Foundation Europe - FSF Europe</TITLE>
-<LINK REV="made" HREF="mailto:greve@fsfeurope.org">
-<LINK REL=STYLESHEET HREF="http://www.fsfeurope.org/fsfeurope.css" TYPE="text/css">
+<LINK REV="made" HREF="mailto:webmasters@fsfeurope.org">
 </HEAD>
-<BODY bgcolor="#ffffff">
+<BODY>
 
 <CENTER><H1>Free Software Foundation Europe</H1></CENTER>
 
-This will become the web site of the <B>FSF Europe</B>, an
+<!-- TOC -->
+<H4>Table of Contents</H4>
+<UL>
+  <LI><A HREF="#introduction" NAME="TOCintroduction">Introduction to the
+  FSFE</A></li>
+  <LI><A HREF="#mailinglists" NAME="TOCmailinglists">Mailinglists</A></li>
+  <LI><A HREF="#documents" NAME="TOCdocuments">Documents</A></li>
+  <li><a href="#events" name="TOCevents">Events</a></li>
+</UL>
+
+<!-- Introduction -->
+<hr>
+<h4><a name="introduction" href="#TOCintroduction">Introduction to the
+FSFE</a></h4>
+<p>This will become the web site of the <B>FSF Europe</B>, an
 organization dedicated to Free Software activities in Europe. As the
 official sister organization of the <B>Free Software Foundation</B> in
 the United States, it will build its activities around the
 <A HREF="http://www.gnu.org/">GNU Project</A> although it won't be
-limited to it.<p>
+limited to it.</p>
 
-Its second role will be to provide maintenance and services for
+<p>Its second role will be to provide maintenance and services for
 the <B>GNU Business Network</B> which is also being planned right
 now. For more information about the <B>GNU Business Network</B> we
 recommend taking a look at the
 <A HREF="http://mailman.gnubiz.org">mailing lists</A> - this is where
-all the information is right now.<p>
+all the information is right now.</p>
 
-The <B>FSF Europe</B> is currently in an "about to become reality"
-phase, so all we can provide at the moment is the <EM>Declaration of
-Intent</EM>. If you want more information, we also recommend checking
-out the <A HREF="http://mailman.fsfeurope.org">mailing lists</A> which
-are mentioned at the end of the <EM>DOI</EM>.
+<p>The <B>FSF Europe</B> is currently in an "about to become reality" phase, so
+all we can provide at the moment is the <a
+href="documents/doi.html">Declaration of Intent</a>. If you want more
+information, we also recommend checking out the <A
+HREF="http://mailman.fsfeurope.org">mailing lists</a>.</p>
 
-<UL>
-<PRE>
+<!-- Mailinglists -->
+<h4><a name="mailinglists" href="#TOCmailinglists">Mailinglists</a></h4>
+<p>To subscibe to any of these mailinglists please send an email with subject
+"subscribe" to <em>&lt;listname&gt;-request@fsfeurope.org</em> or use the web
+interface provided for each list.</p>
+<ul>
+  <li>FSFE Announce: <a
+  href="mailto:announce@fsfeurope.org">announce@fsfeurope.org</a> (<a
+  href="http://mailman.fsfeurope.org/mailman/listinfo/announce">web
+  interface</a>, <a href="/pipermail/announce">archive</a>)</li>
+  <li>FSFE Discussion: <a
+  href="mailto:discussion@fsfeurope.org">discussion@fsfeurope.org</a> (<a
+  href="http://mailman.fsfeurope.org/mailman/listinfo/discussion">web
+  interface</a>, <a href="/pipermail/discussion">archive</a>)</li>
+  <li>FSFE Webmasters: <a href="mailto:web@fsfeurope.org">web@fsfeurope.org</a>
+  (<a href="http://mailman.fsfeurope.org/mailman/listinfo/web">web
+  interface</a>, <a href="/pipermail/web">archive</a>)</li>
+</ul>
 
-                Free Software Foundation Europe
-                Declaration of Intent
-					-- Georg C. F. Greve
-                                             &lt;greve@gnu.org&gt;
+<!-- Documents -->
+<h4><a name="documents" href="#TOCdocuments">Documents</a></h4>
+<p>The following documents are available.</p>
+<ul>
+  <li><a href="documents/doi.html">FSFE Declaration of Intent</a></li>
+  <li><a href="siae/siae.en.html">The Italian law 248/2000: a menace to software professionals</a></li>
+</ul>
 
+<!-- Events -->
+<h4><a name="events" href="#TOCevents">Events</a></h4>
+<p>Still to come ...</p>
 
+<!-- footer -->
+<HR>
+<P>Return to the <A HREF="/">FSFE home page</A>.</P>
 
-A group of people have begun working on the concept of a "Free Software
-Foundation Europe" which will essentially be a sister organization of
-the Free Software Foundation founded by Richard M. Stallman.
+<p>Please send FSFE questions to
+<A HREF="mailto:team@fsfeurope.org"><EM>team@fsfeurope.org</EM></A></P>
 
-It has become evident that the FSF in the U.S., being in a totally
-different time and culture zone, can hardly keep in touch with the
-strong developments and currents in European Free Software. Legally
-independent of the FSF in America it will seek to grant an
-organizatory backbone for Free Software in Europe - especially for
-(although not limited to) the GNU Project. Furthermore it will provide
-the necessary local organization for political work and distribution
-of funds.
+<p>Please send comments on these web pages to
+<A HREF="mailto:webmasters@fsfeurope.org"><EM>webmasters@fsfeurope.org</EM></A>,
+send other questions to
+<A HREF="mailto:team@fsfeurope.org"><EM>team@fsfeurope.org</EM></A>.</p>
 
-In achieving the goals
+<P>Copyright (C) 2001 Free Software Foundation Europe</p>
 
-	- Political mouthpiece for Free Software & the GNU Project
-	- Providing an organizational backbone
-	- Raising & Distribution of funds
+<p>Verbatim copying and distribution of this entire article is
+permitted in any medium, provided this notice is preserved.</p>
 
-we percieve it as absolutely paramount to maintain the true spirit and
-essence of Free Software. 
-
-We also would like to avoid creating another splinter group in the
-movement. For this reason we are in contact with Richard M. Stallman
-as the goal is to become the acknowledged "European sister
-organization" of the FSF - this will also allow Europeans to make
-tax-deductable donations to "the" FSF.
-
-Being the official sister organization brings the responsibility to
-preserve its philosophical standpoints and values. In our eyes it is
-the lastingness of all decisions and workings of the FSF that makes it
-so special; so we will apply the same long-term considerations in all
-our steps.
-
-As the recent past has shown, it is quite quite easy to stray off the
-path and lose track of those long-term goals. Hence it is crucial only
-to have members with a firm grasp on the movement, its origins and the
-goals.
-
-We felt that this responsibility made it necessary to become aware of
-the possible traps and pitfalls along the way before making our plans
-public. After over a year of discussions and building trust into each
-others integrity, we feel that it is time to bring those plans to
-life. 
-
-So far the core consists of
-
-	Georg C. F. Greve &lt;greve@gnu.org&gt;
-
-	Bernhard Reiter &lt;bernhard@intevation.de&gt;
-
-	Werner Koch &lt;wk@gnupg.org&gt;
-
-	Peter Gerwinski &lt;peter@gerwinski.de&gt;
-
-and we will set up a "FSF Europe" organization in Germany as a
-starting point. From there on we will follow a step-by-step to other
-European countries with the final plan to have a strong and sound
-structure in Europe that will work towards the goals of Free
-Software. 
-
-We will be looking for other people with a firm GNU and Free Software
-awareness especially in France, the U.K. and Spain as our first step
-of becoming truly European. If you feel you should be contacted and we
-haven't done so already, don't despair. You might consider getting in
-touch with us, but please bear in mind that being part of this
-organization requires a relatively high level of commitment and
-establishing the necessary level of trust into each other is a slow
-process. 
-
-We intend to do things right as a flawed approach might reap hideous
-results. If you want to help us, feel free to get in touch with us at
-
-	&lt;team@fsfeurope.org&gt;
-
-or subscribe to the general discussion list
-
-	&lt;discussion@fsfeurope.org&gt;
-
-If you just want to be kept update of the progress, feel free to
-subscribe to the announcement-only mailing list
-
-	&lt;announce@fsfeurope.org&gt;
-
-You can subscribe to the mailing lists by sending mail to
-
-	[name]-request@fsfeurope.org
-
-with "subscribe" in the subject or by using the web interface at
-
-	http://mailman.fsfeurope.org
-
-</PRE>
-</UL>
-
-<hr noshade size="1">
-<DIV id="sf">
-These pages are being maintained by Georg C. F. Greve &lt;<A
-    HREF="mailto:greve@gnu.org"><EM>greve@gnu.org</EM></A>&gt; <BR>
+<P>
+Updated:
 <!-- hhmts start -->
-Last modified: Wed Feb 14 19:36:52 CET 2001
+04 Mar 2001 lhorn
 <!-- hhmts end -->
-<DIV>
-</BODY>
-</HTML>
+</body>
+</html>
