@@ -1,3 +1,8 @@
+2001-03-04 Lutz Horn <lh@lutz-horn.de>
+
+	* Removed DOI from index.html and reworked the entire index page.
+	* Linked the siae pages from the index page.
+
 2001-03-03 Lutz Horn <lh@lutz-horn.de>
 
 	* New directory 'documents'. First file is doi.html containing the
